[package]
name = "gitql"
authors = ["AmrDeveloper"]
version = "0.38.0"
edition = "2021"
description = "A SQL like query language to perform queries on .git files"
license = "MIT"
repository = "https://github.com/amrdeveloper/gql/"
documentation = "https://github.com/amrdeveloper/gql"
readme = "README.md"
keywords = ["gitql", "gitql-sdk", "gql", "git", "sql"]
categories = ["command-line-utilities"]
exclude = [".github/**", "docs/**", "media/**", "scripts/**"]

[workspace]
members = [
    "crates/gitql-core",
    "crates/gitql-std",
    "crates/gitql-ast",
    "crates/gitql-cli",
    "crates/gitql-parser",
    "crates/gitql-engine",
]

[workspace.dependencies]
gix = { version = "0.72.1", default-features = false }
dyn-clone = { version = "1.0.19" }
comfy-table = { version = "7.1.4" }
termcolor = { version = "1.4.1" }
serde_json = { version = "1.0.140" }
csv = { version = "1.3.1" }
yaml-rust = { version = "0.4.5" }
chrono = { version = "0.4.41" }
regex = { version = "1.11.1" }
rand = { version = "0.9.1" }
indexmap = { version = "2.9.0" }
linked-hash-map = { version = "0.5.6" }
uuid = { version = "1.16.0", features = ["v4"] }

[profile.release]
lto = true

[dependencies]
gitql-core = { path = "./crates/gitql-core", version = "0.15.0" }
gitql-std = { path = "./crates/gitql-std", version = "0.15.0" }
gitql-ast = { path = "./crates/gitql-ast", version = "0.34.0" }
gitql-parser = { path = "./crates/gitql-parser", version = "0.37.0" }
gitql-engine = { path = "./crates/gitql-engine", version = "0.38.0" }
gitql-cli = { path = "./crates/gitql-cli", version = "0.38.0" }

gix = { workspace = true, features = ["blob-diff", "max-performance"] }

lineeditor = "0.4.1"

[dev-dependencies]
criterion = "0.5.1"

# Run all benchmarks with `cargo bench`
# Run individual benchmarks like `cargo bench -- <regex>` e.g. `cargo bench -- tokenizer`
[[bench]]
name = "benchmarks"
harness = false
