[package]
name = "gitql-ast"
authors = ["AmrDeveloper"]
version = "0.21.0"
edition = "2021"
description = "GitQL Abstract syntax tree (AST)"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-ast"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.2.0" }
