[package]
name = "gitql-ast"
authors = ["AmrDeveloper"]
version = "0.36.0"
edition = "2021"
description = "GitQL Abstract syntax tree (AST)"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-ast"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
dyn-clone = { workspace = true }
