[package]
name = "gitql-cli"
authors = ["AmrDeveloper"]
version = "0.37.0"
edition = "2021"
description = "GitQL Command line interface (CLI) components"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.14.0" }
gitql-ast = { path = "../gitql-ast", version = "0.33.0" }
gitql-parser = { path = "../gitql-parser", version = "0.36.0" }
comfy-table = { workspace = true }
termcolor = { workspace = true }
serde_json = { workspace = true }
yaml-rust = { workspace = true }
csv = { workspace = true }
linked-hash-map = { workspace = true }
