[package]
name = "gitql-cli"
authors = ["AmrDeveloper"]
version = "0.42.0"
edition = "2021"
description = "GitQL Command line interface (CLI) components"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { workspace = true }
gitql-ast = { workspace = true }
gitql-parser = { workspace = true }
comfy-table = { workspace = true }
termcolor = { workspace = true }
serde_json = { workspace = true }
yaml-rust = { workspace = true }
csv = { workspace = true }
linked-hash-map = { workspace = true }
