[package]
name = "gitql-core"
authors = ["AmrDeveloper"]
version = "0.13.0"
edition = "2021"
description = "GitQL Core components"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-ast = { path = "../gitql-ast", version = "0.32.0" }
chrono = { workspace = true }
dyn-clone = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
