[package]
name = "gitql-core"
authors = ["AmrDeveloper"]
version = "0.18.0"
edition = "2021"
description = "GitQL Core components"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-ast = { workspace = true }
chrono = { workspace = true }
dyn-clone = { workspace = true }
indexmap = { workspace = true }
regex = { workspace = true }
