[package]
name = "gitql-engine"
authors = ["AmrDeveloper"]
version = "0.36.0"
edition = "2021"
description = "GitQL Engine"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-engine"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.13.0" }
gitql-ast = { path = "../gitql-ast", version = "0.32.0" }
chrono = { workspace = true }
