[package]
name = "gitql-engine"
authors = ["AmrDeveloper"]
version = "0.37.0"
edition = "2021"
description = "GitQL Engine"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-engine"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.14.0" }
gitql-ast = { path = "../gitql-ast", version = "0.33.0" }
chrono = { workspace = true }
