[package]
name = "gitql-engine"
authors = ["AmrDeveloper"]
version = "0.40.0"
edition = "2021"
description = "GitQL Engine"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-engine"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { workspace = true }
gitql-ast = { workspace = true }
chrono = { workspace = true }
