[package]
name = "gitql-parser"
authors = ["AmrDeveloper"]
version = "0.34.0"
edition = "2021"
description = "GitQL parser"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-parser"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.12.0" }
gitql-ast = { path = "../gitql-ast", version = "0.31.0" }
