[package]
name = "gitql-parser"
authors = ["AmrDeveloper"]
version = "0.40.0"
edition = "2021"
description = "GitQL parser"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-parser"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { workspace = true }
gitql-ast = { workspace = true }
phf = { workspace = true, features = ["macros"] }
