[package]
name = "gitql-std"
authors = ["AmrDeveloper"]
version = "0.11.0"
edition = "2021"
description = "GitQL Standard and Aggregation functions"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { path = "../gitql-core", version = "0.11.0" }
gitql-ast = { path = "../gitql-ast", version = "0.31.0" }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
