[package]
name = "gitql-std"
authors = ["AmrDeveloper"]
version = "0.19.0"
edition = "2021"
description = "GitQL Standard and Aggregation functions"
repository = "https://github.com/amrdeveloper/gql/tree/main/crates/gitql-cli"
license = "MIT"
keywords = ["cli", "gql", "language", "git", "sql"]
categories = ["command-line-utilities"]

[dependencies]
gitql-core = { workspace = true }
gitql-ast = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
